# ctsphub-workshop-2018

./: .gitignore  README.md
01-ubuntu-tx2/: README.md
01-ubuntu-tx2/Processing_msg/script/: Image_module.py  Image_processer.py
01-ubuntu-tx2/installLibrealsenseTX2/: README.md  installLibrealsense.sh
02-ros/: README.md
03-git-docker/: README.md
04-perception/: Dockerfile.01-ICP  Dockerfile.02-marvin  Dockerfile.03-case  README.md  custom_sr300_fps_10.launch
04-perception/01-ICP/catkin_ws/src/icp/: CMakeLists.txt  package.xml  surface_normal.cpp
04-perception/01-ICP/catkin_ws/src/icp/src/: icp.cpp  segmentation.cpp  surface_normal.cpp
04-perception/02-marvin/catkin_ws/src/marvin_convnet/: CMakeLists.txt  package.xml
04-perception/02-marvin/catkin_ws/src/marvin_convnet/src/: detect.cu  marvin.hpp
04-perception/03-case_study/arc2016_TX2/: .gitignore  README.md
04-perception/03-case_study/arc2016_TX2/catkin_ws/src/icp_pose_estimation/: CMakeLists.txt  package.xml
04-perception/03-case_study/arc2016_TX2/catkin_ws/src/model_generating/: CMakeLists.txt  package.xml
04-perception/03-case_study/arc2016_TX2/catkin_ws/src/realsense2_camera/: README.md
05-pick-n-place/: Dockerfile.ur3  README.md
05-pick-n-place/02-UR3/pickathon/catkin_ws/src/moveit_config_ur3_with_gripper/: CMakeLists.txt  _setup_assistant
05-pick-n-place/02-UR3/pickathon/catkin_ws/src/tutorial_0905/: package.xml
05-pick-n-place/02-UR3/pickathon/catkin_ws/src/ur_modern_driver/: CMakeLists.txt
05-pick-n-place/02-UR3/pickathon/src/moveit_config_ur3_with_gripper/: package.xml
05-pick-n-place/02-UR3/pickathon/src/moveit_config_ur3_with_gripper/config/: ompl_planning.yaml
05-pick-n-place/02-UR3/pickathon/src/moveit_config_ur3_with_gripper/launch/: demo.launch  move_group.launch  move_group_real.launch  moveit.rviz  moveit_planning_execution.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ur3_moveit_controller_manager.launch.xml  ur3_moveit_controller_manager_real.launch.xml
05-pick-n-place/02-UR3/pickathon/src/robot_description/: CMakeLists.txt  package.xml
05-pick-n-place/02-UR3/pickathon/src/robot_description/launch/: _upload_robotiq_85_gripper.launch.swp  controller_utils.launch  display.launch  ur3.launch
05-pick-n-place/02-UR3/pickathon/src/robot_description/rviz/: urdf.rviz
05-pick-n-place/02-UR3/pickathon/src/robot_description/urdf/: kinova_robotiq_85_gripper.xacro  robotiq_85_gripper.urdf.xacro  robotiq_85_gripper.xacro  robotiq_85_gripper_fixed.urdf.xacro  ur3.urdf.xacro  ur3_robot.urdf.xacro
05-pick-n-place/02-UR3/pickathon/src/robotiq/: how_to_use_robotiq.txt
05-pick-n-place/02-UR3/pickathon/src/tutorial_0905/: CMakeLists.txt
05-pick-n-place/02-UR3/pickathon/src/tutorial_0905/src/: path_planning.cpp  ur3_control_gazebo.cpp  ur3_control_real.cpp  widget.hpp
05-pick-n-place/02-UR3/pickathon/src/tutorial_0905/srv/: SetTargetPose.srv
(+63 files in other folders)
